--- a/Lista casamento/conteudo.html
+++ b/Lista casamento/conteudo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Lista de casamento</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <h1 id="titulo">Lista de casamento</h1>
     </div>
     <div id="divlinks">
-        <a href="index.html" class="link">Inicio</a>
+        <a href="conteudo.html" class="link">Inicio</a>
         <a href="table.html" class="link">Lista</a>
     </div>
     <h3 id="subtitulo">Gerador de lista de casamento</h3>
@@ -46,15 +47,16 @@
 
           </div>
           <div class="div-form">
-            <span class="span">Família</span>
+            <span class="checkmark">Padrinho/Pagem/Dama de Honra </span>
+            <select name="padrinho" id="optional-best-man">
             <option hidden selected>Selecione uma opção</option>
             <option value="y">sim</option>
             <option value="n">não</option>
-
+          </select>
           </div>
 
           <div class="div-form">
-            <button id="send"> button</button>
+            <button id="send"> enviar </button>
 
           </div>
          
