--- a/Lista casamento/conteudo.html
+++ b/Lista casamento/conteudo.html
@@ -23,24 +23,26 @@
     <section class="section" id="segundasection">
        <form id="form">
           <div class="div-form">
-            <span class="span">Família</span>
+            <span  id="input-family"class="span">Família</span>
             <input type="text" name="Família"
             placeholder="Carvalho" class="input">
 
+            <!-- // essa parte gostaria de uma boa explicação -->
+
           </div>
-          <div class="div-form">
+          <div  id="input-people"class="div-form">
             <span class="span">Pessoas:</span>
             <input type="number" name="Pessoas"
             placeholder="5" class="input">
 
           </div>
-          <div class="div-form">
+          <div  id="input-names"class="div-form">
             <span class="span">Nomes:</span>
             <input type="text" name="Nomes"
             placeholder="Pessoa 1, pessoa 2, pessoa3" class="input">
 
           </div>
-          <div class="div-form">
+          <div  id="input-paying"class="div-form">
             <span class="span">Pagantes</span>
             <input type="number" name="Pagantes"
             placeholder="4" class="input">
