--- a/Lista casamento/FormularioEmpresa/conteudo.html
+++ b/Lista casamento/FormularioEmpresa/conteudo.html
@@ -7,26 +7,72 @@
     <title>Formulario de custos</title>
 </head>
 <body>
-  <header><h1>Calculos custos de show</h1></header>
+  <header><h1>Taconet</h1></header>
 
   <section>
     <div id="form">
-      <h1 id="h1forms">Informe os valores gasto na noite</h1>
-      <p> Transporte:
-        <input type="number" id="transporte"> </input></p>
-      <p>Aluguel AMP:
-        <input type="number" id="amp"> </input>
+      <h1 id="h1forms">Nova empresa</h1>
+      <p> Nome:
+        <input type="text" id="nome"> </input>
+     <select name="tipo" id="tipo" width=20px>
+      <!-- aqui deveriaconseguir colocar o tipo -->
+      <option value="Distribuidor">Distribuidor</option>
+      <option value="Cliente">Cliente</option >
+     </select>
       </p>
-      <p>Comida:
-        <input type="number" name="" id="comida">
-      </p>
-      <p>Bebidas:
-        <input type="number" name="" id="bebidas">
+      <p>Pais:
+      <!-- ta estranho, pois parece que tudo é o mesmo paragrafo, mas não é, e se colocar outro p pro select, vai para baixa e não ao lado -->
+        <select name="pais" id="pais">
+          <option value="pais" class="paises">Brasil</option>
+          <option value="pais" class="paises">Argentina</option>
+          <option value="pais" class="paises">Chile</option>
+          <option value="pais" class="paises">Equador</option>
+          <option value="pais" class="paises">Uruguai</option>
 
+
+        </select>
+
+        <select name="estado" id="estado">Estado(UF)
+          <option  class="estadosbr">Acre</option>
+          <option class="estadosbr">Alagoas</option>
+          <option  class="estadosbr">Amapá</option>
+          <option class="estadosbr">Amazonas</option>
+          <option v class="estadosbr">Bahia</option>
+          <option class="estadosbr">Ceará</option>
+          <option class="estadosbr">Distrito Federal</option>
+          <option  class="estadosbr">Espírito Santo</option>
+          <option  class="estadosbr">Goiás</option>
+          <option  class="estadosbr">Maranhão</option>
+          <option  class="estadosbr">Mato Grosso</option>
+          <option v class="estadosbr">Mato Grosso do Sul</option>
+          <option  class="estadosbr">Minas Gerais</option>
+          <option  class="estadosbr">Pará</option>
+          <option  class="estadosbr">Paraíba</option>
+          <option  class="estadosbr">Paraná</option>
+          <option  class="estadosbr">Pernambuco</option>
+          <option  class="estadosbr">Piauí</option>
+          <option  class="estadosbr">Rio de Janeiro</option>
+          <option  class="estadosbr">Rio Grande do Norte</option>
+          <option  class="estadosbr">Rio Grande do Sul</option>
+          <option class="estadosbr">Rondônia</option>
+          <option  class="estadosbr">Roraima</option>
+          <option vclass="estadosbr">Santa Catarina</option>
+          <option vclass="estadosbr">São Paulo</option>
+          <option vclass="estadosbr">Sergipe</option>
+          <option class="estadosbr">Tocantins</option>
+                
+        </select>
       </p>
-      <p><input type="button" value="Enviar" onclick="calcular()"></p>
+      <p>Razão social:
+        <input type="tex" id="razao">
+      </p>
+      <p>Endereço:
+        <input type="number"  id="endereco">
+      </p>
+      <p>CEP:<input type="text" id="cep"></input></p>
+      
     </div>
   </section>
 </body>
-<script src="calculos.js"></script>
+
 </html>
