--- a/Lista casamento/FormularioCalculo/conteudo.html
+++ b/Lista casamento/FormularioCalculo/conteudo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="lt-br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,15 +18,15 @@
         <input type="number" id="amp"> </input>
       </p>
       <p>Comida:
-        <input type="number" name="" id="comida">
+        <input type="number" name="insumos" id="comida">
       </p>
       <p>Bebidas:
-        <input type="number" name="" id="bebidas">
+        <input type="number" name="insumos" id="bebidas">
 
       </p>
       <p><input type="button" value="Enviar" onclick="calcular()"></p>
     </div>
   </section>
 </body>
-<script src="calculos.js"></script>
+<script src="calcular.js"></script>
 </html>
