--- a/Lista casamento/FormularioCalculo/conteudo.html
+++ b/Lista casamento/FormularioCalculo/conteudo.html
@@ -24,8 +24,11 @@
         <input type="number" name="insumos" id="bebidas">
 
       </p>
+
       <p><input type="button" value="Enviar" onclick="calcular()"></p>
+
     </div>
+    <div id="resultado">Aqui aparece o resultado</div>
   </section>
 </body>
 <script src="calcular.js"></script>
