--- a/Lista casamento/FormularioCalculo/conteudo.html
+++ b/Lista casamento/FormularioCalculo/conteudo.html
@@ -13,7 +13,7 @@
     <div id="form">
       <h1 id="h1forms">Informe os valores gasto na noite</h1>
       <p> Transporte:
-        <input type="number" id="transporte"> </input></p>
+        <label for=>type="number" id=> </label>        
       <p>Aluguel AMP:
         <input type="number" id="amp"> </input>
       </p>
