--- a/Lista casamento/FormularioEmpresa/conteudo.html
+++ b/Lista casamento/FormularioEmpresa/conteudo.html
@@ -37,14 +37,14 @@
           <option class="estadosbr">Alagoas</option>
           <option  class="estadosbr">Amapá</option>
           <option class="estadosbr">Amazonas</option>
-          <option v class="estadosbr">Bahia</option>
+          <option class="estadosbr">Bahia</option>
           <option class="estadosbr">Ceará</option>
           <option class="estadosbr">Distrito Federal</option>
           <option  class="estadosbr">Espírito Santo</option>
           <option  class="estadosbr">Goiás</option>
           <option  class="estadosbr">Maranhão</option>
           <option  class="estadosbr">Mato Grosso</option>
-          <option v class="estadosbr">Mato Grosso do Sul</option>
+          <option  class="estadosbr">Mato Grosso do Sul</option>
           <option  class="estadosbr">Minas Gerais</option>
           <option  class="estadosbr">Pará</option>
           <option  class="estadosbr">Paraíba</option>
@@ -56,9 +56,9 @@
           <option  class="estadosbr">Rio Grande do Sul</option>
           <option class="estadosbr">Rondônia</option>
           <option  class="estadosbr">Roraima</option>
-          <option vclass="estadosbr">Santa Catarina</option>
-          <option vclass="estadosbr">São Paulo</option>
-          <option vclass="estadosbr">Sergipe</option>
+          <option class="estadosbr">Santa Catarina</option>
+          <option class="estadosbr">São Paulo</option>
+          <option class="estadosbr">Sergipe</option>
           <option class="estadosbr">Tocantins</option>
                 
         </select>
@@ -70,12 +70,10 @@
         <label for="Telefone"></label>
 
       <!-- //essas divs não deveriam ficar aqui -->
-      <div><input type="button" value="Limpar" onclick="Limpar()"> </div>
-      
+      <input type="button" value="Limpar" onclick="Limpar()"> 
+      <input type="button" value="Criar Empresa" onclick="CriarEmpresa()"> 
+      <input type="button" value="Cancelar" onclick="Cancelar()">
     </div>
-    <div><input type="button" value="Criar Empresa" onclick="CriarEmpresa()"> </div>
-  </div>
-  <div><input type="button" value="Cancelar" onclick="Cancelar()"> </div>
   </section>
 </body>
 <script src="CriarEmpresa.js"></script>
