--- a/Lista casamento/FormularioCalculo/conteudo.html
+++ b/Lista casamento/FormularioCalculo/conteudo.html
@@ -10,8 +10,9 @@
   <header><h1>Calculos custos de show</h1></header>
 
   <section>
+    <!-- <div id="div-principal"> -->
    <form>
-    <div>
+    <div id="div-principal">
      <div class="input">
        <label for="transporte">Transporte</label>
        <input type="number" name="transporte" id="transporte">
