--- a/Paginas aletorios que fiz/Longin1/conteudo1.html
+++ b/Paginas aletorios que fiz/Longin1/conteudo1.html
@@ -13,12 +13,13 @@
     <!-- porque esse main? para ajudar na sintaxe?me explica chat-->
     <form action="input-box">
         <h1>Login DevClub</h1>
-        <div>
+        <div class="input-box">
             <input placeholder="User" type="email" name="email" id="email">
-            <!-- nesse caso, usado o type, a gente tem aquele autocomplete do sistema e no caso da senha tudo fica em **** -->
-             <i class="bx bxs-user"></i>
+            
+            <i class="bx bxs-user"></i>
+        
         </div>
-        <div>
+        <div class="input-box">
             <!-- não poderia ser um label aqui? -->
             <input type="password" name="senha" id="senha" placeholder="password">
             <i class="bx bxs-lock-alt"></i>
