atualização projetos atoa

--- a/Paginas aletorios que fiz/login1teste/contreudo.html
+++ b/Paginas aletorios que fiz/login1teste/contreudo.html
@@ -11,22 +11,20 @@
 <body>
     <main>
         <form class="form">
+            <h1>Login do DevClub</h1>
             <div class="container">
-                <h1>Login do DevClub</h1>
-           <div class="input-box">
+                
+           <div  class="input-box">
             <input type="email" placeholder="Email">
-            <i class="bi bi-envelope-at-fill"></i>
+            <i id='icone-email' class="bi bi-envelope-at-fill"></i>
 
            </div>                
 
-            </div>
-            <div class="container">
            <div class="input-box">
             <input type="password" placeholder="Senha">
-            <i class="bi bi-file-lock"></i>
-            
+            <i  id='icone-senha' class="bi bi-file-lock"></i>
+        </div>
 
-           </div>
 
             </div>
         </form>
