--- a/Paginas aletorios que fiz/login1teste/contreudo.html
+++ b/Paginas aletorios que fiz/login1teste/contreudo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,10 @@
             <div class="container">
                 
            <div  class="input-box">
-            <input type="email" placeholder="Email">
+
+            <div .class="divinput-box">
+                <input type="email" placeholder="Email">
+            </div>
             <i id='icone-email' class="bi bi-envelope-at-fill"></i>
 
            </div>                
@@ -28,6 +31,7 @@
 
             </div>
         </form>
+          
     </main>
 </body>
 </html>
