--- a/Lista casamento/FormularioEmpresa/conteudo.html
+++ b/Lista casamento/FormularioEmpresa/conteudo.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+
+  </svg>
   <title>Taconet</title>
 </head>
 
@@ -11,118 +13,115 @@
   <header><h1>Registro empresa</h1></header>
 
   <section>
-    <div id="form">
-      <h1 id="h1forms">Nova empresa</h1>
-
-      <div id="divnome">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome">
+   
+      
+      <div id="form">
+        <div id="div-h1-novaempresa">
+          <h1 id="h1forms">Nova empresa
+            <i class="bi bi-table"></i>
+          </h1>
+        </div>
+       <div id="main">
+        Empresa
+         
+          <div id="divnome">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome">
+          </div>
+          <div id="div-tipo">
+            <label for="tipo">Tipo:</label>
+            <select name="tipo" id="tipo">
+              <option value="Distribuidor">Distribuidor</option>
+              <option value="Cliente">Cliente</option>
+            </select>
+          </div>
+          <div id="div-paises">
+            <label for="pais">País:</label>
+            <select name="pais" id="pais" class="select">
+              <option value="Brasil">Brasil</option>
+              <option value="Argentina">Argentina</option>
+              <option value="Chile">Chile</option>
+              <option value="Equador">Equador</option>
+              <option value="Uruguai">Uruguai</option>
+            </select>
+          </div>
+          <div id="div-estado">
+            <label for="estado">Estado (UF):</label>
+            <select name="estado" id="estado">
+              <option value="Acre">Acre</option>
+              <option value="Alagoas">Alagoas</option>
+              <option value="Amapá">Amapá</option>
+              <option value="Amazonas">Amazonas</option>
+              <option value="Bahia">Bahia</option>
+              <option value="Ceará">Ceará</option>
+              <option value="Distrito Federal">Distrito Federal</option>
+              <option value="Espírito Santo">Espírito Santo</option>
+              <option value="Goiás">Goiás</option>
+              <option value="Maranhão">Maranhão</option>
+              <option value="Mato Grosso">Mato Grosso</option>
+              <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+              <option value="Minas Gerais">Minas Gerais</option>
+              <option value="Pará">Pará</option>
+              <option value="Paraíba">Paraíba</option>
+              <option value="Paraná">Paraná</option>
+              <option value="Pernambuco">Pernambuco</option>
+              <option value="Piauí">Piauí</option>
+              <option value="Rio de Janeiro">Rio de Janeiro</option>
+              <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+              <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+              <option value="Rondônia">Rondônia</option>
+              <option value="Roraima">Roraima</option>
+              <option value="Santa Catarina">Santa Catarina</option>
+              <option value="São Paulo">São Paulo</option>
+              <option value="Sergipe">Sergipe</option>
+              <option value="Tocantins">Tocantins</option>
+            </select>
+          </div>
+          <div id="div-razao-social">
+            <label for="razao_social">Razão Social:</label>
+            <input type="text" id="razao_social" name="razao_social">
+          </div>
+          <div id="div-cnpj">
+            <label for="cnpj">CNPJ:</label>
+            <input type="text" id="cnpj" name="cnpj">
+          </div>
+          <div id="div-endereco">
+            <label for="endereco">Endereço:</label>
+            <input type="text" id="endereco" name="endereco">
+          </div>
+          <div id="div-telefone">
+            <label for="telefone">Telefone:</label>
+            <input type="text" id="telefone" name="telefone">
+          </div>
+          <div id="div-cep">
+            <label for="cep">CEP:</label>
+            <input type="text" id="cep" name="cep">
+          </div>
+          <div id="smartcard">
+            <label>
+              <input type="checkbox" name="smartcard"> Código de empresa SmartCard
+            </label>
+          </div>
+          <div id="empresa-principal">
+            <label>
+              <input type="checkbox" name="empresa_principal"> Empresa principal
+            </label>
+          </div>
+          <div id="div-filial">
+            <label for="filial">Filial:</label>
+            <select name="filial" id="filial">
+              <option value="TELEMETRIK">TELEMETRIK</option>
+              <option value="Outra">Outra</option>
+            </select>
+          </div>
+          <div id="botoes">
+            <input type="button" value="Limpar" onclick="Limpar()">
+            <input type="button" value="Criar Empresa" onclick="CriarEmpresa()">
+            <input type="button" value="Cancelar" onclick="Cancelar()">
+          </div>
+       </div>
       </div>
 
-      <div id="div-tipo">
-        <label for="tipo">Tipo:</label>
-        <select name="tipo" id="tipo">
-          <option value="Distribuidor">Distribuidor</option>
-          <option value="Cliente">Cliente</option>
-        </select>
-      </div>
-
-      <div id="div-paises">
-        <label for="pais">País:</label>
-        <select name="pais" id="pais" class="select">
-          <option value="Brasil">Brasil</option>
-          <option value="Argentina">Argentina</option>
-          <option value="Chile">Chile</option>
-          <option value="Equador">Equador</option>
-          <option value="Uruguai">Uruguai</option>
-        </select>
-      </div>
-
-      <div id="div-estado">
-        <label for="estado">Estado (UF):</label>
-        <select name="estado" id="estado">
-          <option value="Acre">Acre</option>
-          <option value="Alagoas">Alagoas</option>
-          <option value="Amapá">Amapá</option>
-          <option value="Amazonas">Amazonas</option>
-          <option value="Bahia">Bahia</option>
-          <option value="Ceará">Ceará</option>
-          <option value="Distrito Federal">Distrito Federal</option>
-          <option value="Espírito Santo">Espírito Santo</option>
-          <option value="Goiás">Goiás</option>
-          <option value="Maranhão">Maranhão</option>
-          <option value="Mato Grosso">Mato Grosso</option>
-          <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
-          <option value="Minas Gerais">Minas Gerais</option>
-          <option value="Pará">Pará</option>
-          <option value="Paraíba">Paraíba</option>
-          <option value="Paraná">Paraná</option>
-          <option value="Pernambuco">Pernambuco</option>
-          <option value="Piauí">Piauí</option>
-          <option value="Rio de Janeiro">Rio de Janeiro</option>
-          <option value="Rio Grande do Norte">Rio Grande do Norte</option>
-          <option value="Rio Grande do Sul">Rio Grande do Sul</option>
-          <option value="Rondônia">Rondônia</option>
-          <option value="Roraima">Roraima</option>
-          <option value="Santa Catarina">Santa Catarina</option>
-          <option value="São Paulo">São Paulo</option>
-          <option value="Sergipe">Sergipe</option>
-          <option value="Tocantins">Tocantins</option>
-        </select>
-      </div>
-
-      <div id="div-razao-social">
-        <label for="razao_social">Razão Social:</label>
-        <input type="text" id="razao_social" name="razao_social">
-      </div>
-
-      <div id="div-cnpj">
-        <label for="cnpj">CNPJ:</label>
-        <input type="text" id="cnpj" name="cnpj">
-      </div>
-
-      <div id="div-endereco">
-        <label for="endereco">Endereço:</label>
-        <input type="text" id="endereco" name="endereco">
-      </div>
-
-      <div id="div-telefone">
-        <label for="telefone">Telefone:</label>
-        <input type="text" id="telefone" name="telefone">
-      </div>
-
-      <div id="div-cep">
-        <label for="cep">CEP:</label>
-        <input type="text" id="cep" name="cep">
-      </div>
-
-      <div id="smartcard">
-        <label>
-          <input type="checkbox" name="smartcard"> Código de empresa SmartCard
-        </label>
-      </div>
-
-      <div id="empresa-principal">
-        <label>
-          <input type="checkbox" name="empresa_principal"> Empresa principal
-        </label>
-      </div>
-
-      <div id="div-filial">
-        <label for="filial">Filial:</label>
-        <select name="filial" id="filial">
-          <option value="TELEMETRIK">TELEMETRIK</option>
-          <option value="Outra">Outra</option>
-        </select>
-      </div>
-
-      <div id="botoes">
-        <input type="button" value="Limpar" onclick="Limpar()">
-        <input type="button" value="Criar Empresa" onclick="CriarEmpresa()">
-        <input type="button" value="Cancelar" onclick="Cancelar()">
-      </div>
-
-    </div>
   </section>
 
   <script src="CriarEmpresa.js"></script>
