--- a/CFB CURSOS/JS/METODOS DOM/CLASSNAME/aula32.html
+++ b/CFB CURSOS/JS/METODOS DOM/CLASSNAME/aula32.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>aula 32</title>
 </head>
 <body>
@@ -12,14 +13,14 @@
     <div id='c4'class="curso c1">php</div>
     <div id='c5'class="curso c1">react</div>
     <div id='c6'class="curso c1">mtsql</div>
-    <div id='c7'class="curso c1">c++</div>
-    <div id='c8'class="curso c1">c#</div>
-    <div id='c9'class="curso c1">arqduino</div>
-    <div id='c10'class="curso c1">react native</div>
-    <div id='c11'class="curso c1">pyhton</div>
-    <div id='c12'class="curso c1">raspberry</div>
+    <div id='c7'class="curso c2">c++</div>
+    <div id='c8'class="curso c2">c#</div>
+    <div id='c9'class="curso c2">arqduino</div>
+    <div id='c10'class="curso c2">react native</div>
+    <div id='c11'class="curso c2">pyhton</div>
+    <div id='c12'class="curso c2">raspberry</div>
 
-    <script src="aula32.js"></script>
+    <script src="aula32a.js"></script>
 
 
 
