--- a/CFB CURSOS/JS/ADD EVENTOS/pratica/aula35.html
+++ b/CFB CURSOS/JS/ADD EVENTOS/pratica/aula35.html
@@ -17,11 +17,11 @@
             <div id="c6" class="curso">MYSQL</div>
     </div>
 
-    <button id="btn_copiar"> copiar -> </button>
+    <button id="btn_transferir"> - Transferir -</button>
     <div id="caixa2" class="caixa">
        
     </div>
 </main>
-    <script src="aulaa35.js"></script>
+    <script src="aula35B.js"></script>
 </body>
 </html>
